--- a/TP1/informe/ej3.lyx
+++ b/TP1/informe/ej3.lyx
@@ -79,7 +79,7 @@
 \begin_body
 
 \begin_layout Section
-Ejercicio 3
+Ejercicio 3(HACER TODOS LOS GRAFICOS DEVUELTA CON 10uF)
 \end_layout
 
 \begin_layout Subsection
@@ -105,7 +105,18 @@ El circuito que se utilizará para estos ensayos es el siguiente:
 \begin_inset Float figure
 wide false
 sideways false
-status collapsed
+status open
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename imagenes/ej3_circ.png
+	scale 35
+
+\end_inset
+
+
+\end_layout
 
 \begin_layout Plain Layout
 \begin_inset Caption Standard
@@ -179,8 +190,7 @@ Señal de disparo
 \begin_layout Standard
 La señal de disparo ya no representa un pulso ideal como en el punto anterior.
  Debido a los transistores en configuración totem-pole, la señal no puede
- llegar ni a 0V ni a 9V, tambien se observa una pequeña distorsión en 4,5V
- ya que en este punto se realiza la transición entre los dos transistores.
+ llegar ni a 0V ni a 9V.
  Sin embargo el duty y periodo es igual al calculado en el punto anterior,
  así que ninguna de estas particularidades debería representar un cambio
  en el funcionamiento del circuito.
@@ -246,6 +256,13 @@ sideways false
 status collapsed
 
 \begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename imagenes/ej3_tenind.png
+	scale 50
+
+\end_inset
+
 
 \end_layout
 
@@ -267,6 +284,174 @@ Simulación tensión en el inductor
 
 \end_inset
 
+
+\end_layout
+
+\begin_layout Standard
+Se observa una tensión oscilatoria correspondiente con el funcionamiento
+ transitorio de este circuito.
+\end_layout
+
+\begin_layout Paragraph
+Corriente en el diodo
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename imagenes/ej3_corrdiodov2.png
+	scale 50
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Simulación corriente en el diodo
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+El comportamiento que se observa es muy similar al comportamiento del ejercicio
+ 2.
+\end_layout
+
+\begin_layout Paragraph
+tensión de salida
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename imagenes/ej3_outv2.png
+	scale 50
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Señal de salida
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Si bien la forma de señal y velocidad de convergencia es igual a lo visto
+ en el punto anterior, su valor de convergencia(3,3V) es menor a los esperado
+ (3,7V) que fue para lo que se diseñó este circuito.
+ Por lo tanto no se cumple la relación 
+\begin_inset Formula $\frac{V_{o}}{V_{d}}=D$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Subsubsection
+Segundo diseño
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename imagenes/ej3_out2.png
+	scale 50
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Señal de salida
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+En este segundo diseño, se buscó el Duty que satisfaga la consigna.
+ Esto se logró iterando el valor del duty de la señal de disparo y observando
+ la variación en la tensión de salida, en una suerte de sistema realimentado
+ manualmente.
+ 
+\end_layout
+
+\begin_layout Standard
+El Duty necesario para obtener 3,7V en la salida fue de 45,5% una diferencia
+ del 4,4% con el calculado en el punto anterior.
+\end_layout
+
+\begin_layout Subsection
+Análisis de la diferencia de comportamiento
+\end_layout
+
+\begin_layout Standard
 
 \end_layout
 
