--- a/TP1/informe/ej1.lyx
+++ b/TP1/informe/ej1.lyx
@@ -139,7 +139,12 @@ Para calcular los tiempos de conmutación del encendido y apagado de la fuente,
 
 \begin_layout Standard
 \paragraph_spacing onehalf
-Se sabe que la tensión máxima de la llave es de 
+Se utilizó un valor de 
+\begin_inset Formula $V_{gg}=15V$
+\end_inset
+
+.
+ Se sabe que la tensión máxima de la llave es de 
 \begin_inset Formula $50V$
 \end_inset
 
@@ -259,7 +264,7 @@ El tiempo
 \begin_layout Standard
 \begin_inset Formula 
 \[
-t_{d}=-\tau_{1}.ln(1-\frac{V_{gsth}}{V_{gg}})=2.0x10^{-8}s
+t_{d}=-\tau_{1}.ln(1-\frac{V_{gsth}}{V_{gg}})=20ns
 \]
 
 \end_inset
@@ -286,7 +291,7 @@ Calculando el tiempo que tarda en llegar la tensión
 \begin_layout Standard
 \begin_inset Formula 
 \[
-t_{ri}=-\tau_{1}.ln(1-\frac{V_{gsIo}}{V_{gg}})-t_{d}=5.9x10-10s
+t_{ri}=-\tau_{1}.ln(1-\frac{V_{gsIo}}{V_{gg}})-t_{d}=0.59ns
 \]
 
 \end_inset
@@ -328,7 +333,7 @@ y calculando
 \begin_layout Standard
 \begin_inset Formula 
 \[
-\Delta t=t_{fv}=\frac{\Delta Q}{i_{g}}=5.1x10-8s
+\Delta t=t_{fv}=\frac{\Delta Q}{i_{g}}=51ns
 \]
 
 \end_inset
@@ -347,7 +352,7 @@ El tiempo de encendido
 \begin_layout Standard
 \begin_inset Formula 
 \[
-T_{on}=t_{d}+t_{ri}+t_{fv}=x+x+x
+T_{on}=t_{d}+t_{ri}+t_{fv}=20ns+.59ns+51ns
 \]
 
 \end_inset
@@ -358,7 +363,7 @@ T_{on}=t_{d}+t_{ri}+t_{fv}=x+x+x
 \begin_layout Standard
 \begin_inset Formula 
 \[
-T_{on}=valor
+T_{on}=71.59ns
 \]
 
 \end_inset
@@ -562,7 +567,7 @@ En este caso, el
 \begin_layout Standard
 \begin_inset Formula 
 \[
-t_{doff}=-\tau_{2}.ln(\frac{V_{gsIo}}{V_{gg}})=1.5x10.7s
+t_{doff}=-\tau_{2}.ln(\frac{V_{gsIo}}{V_{gg}})=150ns
 \]
 
 \end_inset
@@ -594,7 +599,7 @@ El tiempo de rise de la tensión
 \begin_layout Standard
 \begin_inset Formula 
 \[
-t_{rv}=\frac{\Delta Q}{i_{g}}=\frac{\Delta Q}{\frac{V_{gsIo}}{Rg}}=1.34x10-7s
+t_{rv}=\frac{\Delta Q}{i_{g}}=\frac{\Delta Q}{\frac{V_{gsIo}}{Rg}}=134ns
 \]
 
 \end_inset
@@ -613,7 +618,7 @@ El apagado finaliza cuando la tensión de
 \begin_layout Standard
 \begin_inset Formula 
 \[
-t_{fi}=-\tau_{1}.ln(\frac{V_{gsth}}{V_{gsIo}})
+t_{fi}=-\tau_{1}.ln(\frac{V_{gsth}}{V_{gsIo}})=1.6ns
 \]
 
 \end_inset
@@ -632,7 +637,7 @@ El tiempo de apagado
 \begin_layout Standard
 \begin_inset Formula 
 \[
-T_{off}=t_{doff}+t_{rv}+t_{fi}=x+x+x
+T_{off}=t_{doff}+t_{rv}+t_{fi}=150ns+134ns+1.6ns
 \]
 
 \end_inset
@@ -643,7 +648,7 @@ T_{off}=t_{doff}+t_{rv}+t_{fi}=x+x+x
 \begin_layout Standard
 \begin_inset Formula 
 \[
-T_{off}=valor
+T_{off}=285.6ns
 \]
 
 \end_inset
@@ -861,51 +866,170 @@ Curva de encendido para
 \end_layout
 
 \begin_layout Standard
-A grandes rasgos se observa que los tiempos entre simulación no coinciden.
+\begin_inset Float figure
+placement H
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename ej1/on vd vs id.png
+	lyxscale 50
+	scale 40
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Curva de encendido para 
+\begin_inset Formula $V_{ds}$
+\end_inset
+
+ e 
+\begin_inset Formula $I_{d}$
+\end_inset
+
+, simulación y teoría.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+A simple vista se observa que las formas de las curvas entre simulación
+ y teoría coinciden, pero no así los tiempos de conmutación entre simulación
+ y teoría.
+ Esto se debe a que el LTSpice, los componentes tienen características reales,
+ que hacen que difiera del modelo teórico ideal, por ejemplo, la caída del
+ tensión que acontece en el diodo, la capacitancia del modelo equivalente
+ del inductor, y las características propias del transistor de potencia.
+\end_layout
+
+\begin_layout Standard
+La única forma que no coincide es la 
+\begin_inset Formula $I_{d}$
+\end_inset
+
+, ya que se observa un sobrepico de corriente que finalmente se estabiliza
+ en 
+\begin_inset Formula $I_{o}=0.333A$
+\end_inset
+
+, como se ve en las siguientes curvas para el apagado.
+ Esto ocurre debido a que la bobina se opone frente al cambio brusco de
+ la corriente que circula por ella y ésta se va incrementando lentamente.
+ 
 \end_layout
 
 \begin_layout Subsubsection
-paver
+Apagado
 \end_layout
 
 \begin_layout Standard
-la diferencia entre ig teo vs sim se debe a que no esta previamente cargado
+A continuación se presentan las curvas de apagado:
 \end_layout
 
 \begin_layout Standard
-con un valor mas chico de L se ve la meseta
+\begin_inset Float figure
+placement H
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename ej1/off vgs vs ig.png
+	lyxscale 50
+	scale 40
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Curva de apagado para 
+\begin_inset Formula $V_{gs}$
+\end_inset
+
+ e 
+\begin_inset Formula $I_{g}$
+\end_inset
+
+, simulación y teoría.
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
-encendido:
+\begin_inset Float figure
+placement H
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename ej1/off vd vs id.png
+	lyxscale 50
+	scale 40
+
+\end_inset
+
+
 \end_layout
 
-\begin_layout Standard
-td=2.07x10-8
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Curva de apagado para 
+\begin_inset Formula $V_{ds}$
+\end_inset
+
+ e 
+\begin_inset Formula $I_{d}$
+\end_inset
+
+, simulación y teoría.
 \end_layout
 
-\begin_layout Standard
-tri=5.93x10-10
+\end_inset
+
+
 \end_layout
 
-\begin_layout Standard
-tfv=5.05x10-8
-\end_layout
+\end_inset
 
-\begin_layout Standard
-apagado:
-\end_layout
-
-\begin_layout Standard
-tdoff=1.5x10-7
-\end_layout
-
-\begin_layout Standard
-trv=1.34x10-7
-\end_layout
-
-\begin_layout Standard
-tfi=1.6x10-9
+Las curvas simuladas son muy similares a las teóricas, salvaguardando la
+ diferencia entre los tiempos ya mencionada.
 \end_layout
 
 \end_body
