--- a/TP1/informe/Informe.lyx
+++ b/TP1/informe/Informe.lyx
@@ -28,7 +28,7 @@
 \output_sync 0
 \bibtex_command default
 \index_command default
-\paperfontsize default
+\paperfontsize 10
 \spacing single
 \use_hyperref false
 \papersize default
@@ -57,10 +57,10 @@
 \shortcut idx
 \color #008000
 \end_index
-\leftmargin 25mm
-\topmargin 2.5cm
-\rightmargin 25mm
-\bottommargin 2.5cm
+\leftmargin 15mm
+\topmargin 2cm
+\rightmargin 15mm
+\bottommargin 2cm
 \secnumdepth 3
 \tocdepth 3
 \paragraph_separation indent
