--- a/TP1/informe/ej3.lyx
+++ b/TP1/informe/ej3.lyx
@@ -33,7 +33,7 @@
 \spacing single
 \use_hyperref false
 \papersize default
-\use_geometry false
+\use_geometry true
 \use_package amsmath 1
 \use_package amssymb 1
 \use_package cancel 1
@@ -58,6 +58,10 @@
 \shortcut idx
 \color #008000
 \end_index
+\leftmargin 2cm
+\topmargin 2.5cm
+\rightmargin 2cm
+\bottommargin 2.5cm
 \secnumdepth 3
 \tocdepth 3
 \paragraph_separation indent
@@ -105,7 +109,7 @@ El circuito que se utilizará para estos ensayos es el siguiente:
 \begin_inset Float figure
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
@@ -136,13 +140,6 @@ Conversor Buck 9(V)-3.7(V) con transistor FET
 
 \end_layout
 
-\begin_layout Standard
-\begin_inset Newpage pagebreak
-\end_inset
-
-
-\end_layout
-
 \begin_layout Subsection
 Análisis del circuito
 \end_layout
@@ -164,13 +161,14 @@ Señal de disparo
 \begin_inset Float figure
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
 	filename imagenes/ej3_disp.png
-	scale 50
+	width 8cm
+	height 3.5cm
 
 \end_inset
 
@@ -616,6 +614,15 @@ Se entiende entonces que al dejar de ser ideal el switch, existe una pérdida
 
 \begin_layout Standard
 \begin_inset Float figure
+placement H
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Float figure
+placement H
 wide false
 sideways false
 status collapsed
@@ -651,13 +658,11 @@ Potencia disipada en el transistor
 \end_inset
 
 
-\end_layout
-
-\begin_layout Standard
 \begin_inset Float figure
+placement H
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
@@ -675,6 +680,27 @@ status open
 
 \begin_layout Plain Layout
 Potencia disipada en una conmutación
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+
 \end_layout
 
 \end_inset
