--- a/TP2/informe/Informe.lyx
+++ b/TP2/informe/Informe.lyx
@@ -105,5 +105,35 @@ filename "ej1.lyx"
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand input
+filename "ej2.lyx"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand input
+filename "ej3.lyx"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand input
+filename "ej3-tp2.lyx"
+
+\end_inset
+
+
+\end_layout
+
 \end_body
 \end_document
