--- a/TP2/informe/Informe.lyx
+++ b/TP2/informe/Informe.lyx
@@ -28,6 +28,7 @@
 \output_sync 0
 \bibtex_command default
 \index_command default
+\float_placement H
 \paperfontsize 10
 \spacing single
 \use_hyperref false
