--- a/TP2/informe/ej3.lyx
+++ b/TP2/informe/ej3.lyx
@@ -95,14 +95,22 @@ ia de un sistema lineal de la forma (donde u es la entrada, y es la salida):
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $\dot{x}=A\cdot x+C\cdot u$
+\begin_inset Formula 
+\[
+\dot{x}=A\cdot x+C\cdot u
+\]
+
 \end_inset
 
 
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $y=B\cdot x$
+\begin_inset Formula 
+\[
+y=B\cdot x
+\]
+
 \end_inset
 
 
@@ -147,149 +155,19 @@ De esta forma, para el circuito indicado, se obtienen las expresiones de
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $A_{on}$
-\end_inset
-
-=
-\begin_inset Tabular
-<lyxtabular version="3" rows="2" columns="2">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top">
-<column alignment="center" valignment="top">
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $0$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $0$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $0$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $-\frac{1}{C\cdot R_{1}}$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-</lyxtabular>
-
-\end_inset
-
-, 
-\begin_inset Formula $B_{on}=$
-\end_inset
-
-
-\begin_inset Tabular
-<lyxtabular version="3" rows="2" columns="1">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top">
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $\frac{1}{L}$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $0$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-</lyxtabular>
-
-\end_inset
-
-, 
-\begin_inset Formula $C_{on}=$
-\end_inset
-
-
-\begin_inset Tabular
-<lyxtabular version="3" rows="1" columns="2">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top">
-<column alignment="center" valignment="top">
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $0$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $1$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-</lyxtabular>
+\begin_inset Formula 
+\[
+A_{on}=\left[\begin{array}{cc}
+0 & 0\\
+\\
+0 & -\frac{1}{CR_{1}}
+\end{array}\right],B_{on}=\left[\begin{array}{c}
+\frac{1}{L}\\
+\\
+0
+\end{array}\right],C_{on}=\left[\begin{array}{ccc}
+0 &  & 1\end{array}\right]
+\]
 
 \end_inset
 
@@ -301,149 +179,19 @@ Se obtienen luego las expresiones de las matrices con la llave abierta:
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $A_{off}$
-\end_inset
-
-=
-\begin_inset Tabular
-<lyxtabular version="3" rows="2" columns="2">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top">
-<column alignment="center" valignment="top">
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $0$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $\frac{-1}{L}$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $\frac{1}{C}$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $-\frac{1}{R\cdot C}$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-</lyxtabular>
-
-\end_inset
-
-, 
-\begin_inset Formula $B_{off}=$
-\end_inset
-
-
-\begin_inset Tabular
-<lyxtabular version="3" rows="2" columns="1">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top">
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $\frac{1}{L}$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $0$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-</lyxtabular>
-
-\end_inset
-
-, 
-\begin_inset Formula $C_{off}=$
-\end_inset
-
-
-\begin_inset Tabular
-<lyxtabular version="3" rows="1" columns="2">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top">
-<column alignment="center" valignment="top">
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $0$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $1$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-</lyxtabular>
+\begin_inset Formula 
+\[
+A_{off}=\left[\begin{array}{cc}
+0 & -\frac{1}{L}\\
+\\
+\frac{1}{C} & -\frac{1}{CR}
+\end{array}\right],B_{off}=\left[\begin{array}{c}
+\frac{1}{L}\\
+\\
+0
+\end{array}\right],C_{off}=\left[\begin{array}{ccc}
+0 &  & 1\end{array}\right]
+\]
 
 \end_inset
 
@@ -459,153 +207,19 @@ Las matrices promedio (
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $A_{m}$
-\end_inset
-
-
-\begin_inset Formula $=$
-\end_inset
-
-
-\begin_inset Tabular
-<lyxtabular version="3" rows="2" columns="2">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top">
-<column alignment="center" valignment="top">
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $0$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $\frac{D-1}{L}$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $\frac{1-D}{C}$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $\frac{-1}{R\cdot C}$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-</lyxtabular>
-
-\end_inset
-
-, 
-\begin_inset Formula $B_{m}=$
-\end_inset
-
-
-\begin_inset Tabular
-<lyxtabular version="3" rows="2" columns="1">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top">
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $\frac{1}{L}$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $0$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-</lyxtabular>
-
-\end_inset
-
-, 
-\begin_inset Formula $C_{m}=$
-\end_inset
-
-
-\begin_inset Tabular
-<lyxtabular version="3" rows="1" columns="2">
-<features tabularvalignment="middle">
-<column alignment="center" valignment="top">
-<column alignment="center" valignment="top">
-<row>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $0$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-\begin_inset Formula $1$
-\end_inset
-
-
-\end_layout
-
-\end_inset
-</cell>
-</row>
-</lyxtabular>
+\begin_inset Formula 
+\[
+A_{m}=\left[\begin{array}{cc}
+0 & \frac{D-1}{L}\\
+\\
+\frac{1-D}{C} & -\frac{1}{CR}
+\end{array}\right],B_{m}=\left[\begin{array}{c}
+\frac{1}{L}\\
+\\
+0
+\end{array}\right],C_{m}=\left[\begin{array}{ccc}
+0 &  & 1\end{array}\right]
+\]
 
 \end_inset
 
@@ -625,7 +239,11 @@ Resolviendo luego el sistema para estas matrices promedio se obtiene la
 
 \begin_layout Standard
 \align center
-\begin_inset Formula $\frac{V_{o}(s)}{D(s)}=\frac{V_{s}}{(1-D)^{2}}\frac{1-\frac{L}{R\cdot(1-D)^{2}}\cdot S}{\frac{L\cdot C}{(1-D)^{2}}\cdot S^{2}+\frac{L}{R(1-D)^{2}}\cdot S+1}$
+\begin_inset Formula 
+\[
+\frac{V_{o}(s)}{D(s)}=\frac{V_{s}}{(1-D)^{2}}\frac{1-\frac{L}{R\cdot(1-D)^{2}}\cdot S}{\frac{L\cdot C}{(1-D)^{2}}\cdot S^{2}+\frac{L}{R(1-D)^{2}}\cdot S+1}
+\]
+
 \end_inset
 
 
@@ -636,11 +254,19 @@ Obtenemos los polos y ceros de esta transferencia:
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $Z=\frac{R(1-D)^{2}}{L}$
+\begin_inset Formula 
+\[
+Z=\frac{R(1-D)^{2}}{L}
+\]
+
 \end_inset
 
  y 
-\begin_inset Formula $P_{1}=P_{2}^{*}=-\psi\cdot\omega+\omega\cdot\sqrt{1-\psi^{2}}$
+\begin_inset Formula 
+\[
+P_{1}=P_{2}^{*}=-\psi\cdot\omega+\omega\cdot\sqrt{1-\psi^{2}}
+\]
+
 \end_inset
 
 
@@ -655,32 +281,32 @@ Donde
 \begin_inset Formula $\omega=\sqrt{\frac{(1-D)^{2}}{L\cdot C}}$
 \end_inset
 
-
+.
 \end_layout
 
 \begin_layout Standard
 Teniendo en cuenta el duty ideal de 0.6 (el cual se demuestra en el próximo
  ítem), una 
-\begin_inset Formula $R\text{=}10(\Omega)$
+\begin_inset Formula $R\text{=}10\Omega$
 \end_inset
 
 , un 
-\begin_inset Formula $C=47(uF)$
+\begin_inset Formula $C=47\mu F$
 \end_inset
 
-y una 
-\begin_inset Formula $L=220(uH),$
+ y una 
+\begin_inset Formula $L=220\mu H,$
 \end_inset
 
 obtenemos los valores:
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $Z=\frac{R(1-D)^{2}}{L}=7272$
-\end_inset
+\begin_inset Formula 
+\[
+Z=\frac{R(1-D)^{2}}{L}=7272,\,\,\,P_{1}=P_{2}^{*}=-45269352+45269352j
+\]
 
-, 
-\begin_inset Formula $P_{1}=P_{2}^{*}=-45269352+45269352j$
 \end_inset
 
 
@@ -688,18 +314,18 @@ obtenemos los valores:
 
 \begin_layout Standard
 Por otro lado, cuando la carga vale 
-\begin_inset Formula $R\text{=}(10//20)(\Omega)$
+\begin_inset Formula $R\text{=}(10//20)\Omega$
 \end_inset
 
 , en el otro posible estado del sistema:
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $Z=\frac{R(1-D)^{2}}{L}=4848$
-\end_inset
+\begin_inset Formula 
+\[
+Z=\frac{R(1-D)^{2}}{L}=4848,\,\,\,P_{1}=P_{2}^{*}=-67904028+67904028j
+\]
 
-, 
-\begin_inset Formula $P_{1}=P_{2}^{*}=-67904028+67904028j$
 \end_inset
 
 
@@ -717,7 +343,11 @@ Tomando la relación entre entrada y salida para un conversor boost podemos
 
 \begin_layout Standard
 \align center
-\begin_inset Formula $V_{i}=V_{o}\cdot(1-D_{ideal})$
+\begin_inset Formula 
+\[
+V_{i}=V_{o}\cdot(1-D_{ideal})
+\]
+
 \end_inset
 
 
@@ -725,7 +355,11 @@ Tomando la relación entre entrada y salida para un conversor boost podemos
 
 \begin_layout Standard
 \align center
-\begin_inset Formula $D_{ideal}=1-\frac{V_{i}}{V_{o}}$
+\begin_inset Formula 
+\[
+D_{ideal}=1-\frac{V_{i}}{V_{o}}
+\]
+
 \end_inset
 
 
@@ -733,7 +367,11 @@ Tomando la relación entre entrada y salida para un conversor boost podemos
 
 \begin_layout Standard
 \align center
-\begin_inset Formula $D_{ideal}=0.5$
+\begin_inset Formula 
+\[
+D_{ideal}=0.5
+\]
+
 \end_inset
 
 
@@ -840,23 +478,28 @@ Un período de la señal de prendido y apagado del MOS
 
 \begin_layout Standard
 Notamos del gráfico anterior que 
-\begin_inset Formula $t_{on1}=29.221188(ms)$
+\begin_inset Formula $t_{on1}=29.221188ms$
 \end_inset
 
 , 
-\begin_inset Formula $t_{off}=29.233072(ms)$
+\begin_inset Formula $t_{off}=29.233072ms$
 \end_inset
 
  y 
-\begin_inset Formula $t_{on2}=29.241267(ms)$
+\begin_inset Formula $t_{on2}=29.241267ms$
 \end_inset
 
-.A partir de estos datos, calculamos en duty cycle medido:
+.
+ A partir de estos datos, calculamos en duty cycle medido:
 \end_layout
 
 \begin_layout Standard
 \align center
-\begin_inset Formula $D_{real}(\%)=\frac{t_{off}-t_{on1}}{t_{on2}-t_{on1}}\cdot100=59.2\%$
+\begin_inset Formula 
+\[
+D_{real}(\%)=\frac{t_{off}-t_{on1}}{t_{on2}-t_{on1}}\cdot100=59.2\%
+\]
+
 \end_inset
 
 
