tp listo, hasta nunca potencia 🐱‍🏍

--- a/TP3/informe/Informe.lyx
+++ b/TP3/informe/Informe.lyx
@@ -107,9 +107,26 @@ filename "parte1.lyx"
 \end_layout
 
 \begin_layout Standard
+\begin_inset Newpage pagebreak
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
 \begin_inset CommandInset include
 LatexCommand input
 filename "parte2.lyx"
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset include
+LatexCommand input
+filename "punto22.lyx"
 
 \end_inset
 
