--- a/TP3/informe/punto22.lyx
+++ b/TP3/informe/punto22.lyx
@@ -81,8 +81,8 @@
 
 \begin_body
 
-\begin_layout Section
-Modulaión PWM
+\begin_layout Subsection
+Modulación PWM
 \end_layout
 
 \begin_layout Standard
@@ -261,7 +261,7 @@ Donde la diferencia con el valor de ma real está dada por alguna perdida
  en los transistores o elementos parástios que no se tuvieron en cuenta.
 \end_layout
 
-\begin_layout Subsection
+\begin_layout Subsubsection
 Caso mf = 15
 \end_layout
 
@@ -302,7 +302,7 @@ Como se puede observar en la figura y como está descripto en la ecuación
  con la tensión, por lo que a efectos prácticos representan el mismo concepto.
 \end_layout
 
-\begin_layout Subsection
+\begin_layout Subsubsection
 Caso ma = 0,8
 \end_layout
 
@@ -343,7 +343,7 @@ Al aumentar el valor de mf aumentó la frecuencia de la triangular, esto
  dado por la frecuencia de la senoidal utilizada en la modulación.
 \end_layout
 
-\begin_layout Subsection
+\begin_layout Subsubsection
 Caso mf = 1,3
 \end_layout
 
@@ -384,7 +384,7 @@ Aquí nos encontramos en el caso de sobremodulación ya que ma = 1,3 es mayor
  en la figura en el caso de mf = 81 
 \end_layout
 
-\begin_layout Subsection
+\begin_layout Subsubsection
 Máximo mf
 \end_layout
 
@@ -396,8 +396,8 @@ n está dada por el transistor.
  un transistor con tiempos de conmutación más veloces y con menores perdidas.
 \end_layout
 
-\begin_layout Subsection
-Conclusión
+\begin_layout Section
+Conclusiones
 \end_layout
 
 \begin_layout Standard
